bk_ida/gobmkida/g1/edge_clamp_moves
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_clamp_moves/src/engine/reading.c:2608:6: error: use of undeclared identifier 'dword_760CDC'
v6 = dword_760CDC[v5]; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_clamp_moves/src/engine/reading.c:2620:6: error: use of undeclared identifier 'dword_760CDC'
up = dword_760CDC[v5]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_clamp_moves/src/obj/1/reading.o] Error 1
